8074860: Structured Exception Catcher missing around CreateJavaVM on Windows

Add __try/__except around JNI_CreateJavaVM

Reviewed-by: mgronlun, dcubed